add localization for Italian

--- a/app/shared/locales/de/translations.json
+++ b/app/shared/locales/de/translations.json
@@ -6,6 +6,7 @@
   "FRENCH": "Französisch",
   "JAPANESE": "Japanisch",
   "PORTUGUESE": "Portugiesisch",
+  "ITALIAN": "Italienisch",
   "INTELLECT": "Intellekt",
   "DISCIPLINE": "Disziplin",
   "STRENGTH": "Stärke",
