--- a/app/shared/locales/en/translations.json
+++ b/app/shared/locales/en/translations.json
@@ -6,6 +6,7 @@
   "FRENCH": "French",
   "JAPANESE": "Japanese",
   "PORTUGUESE": "Portuguese",
+  "ITALIAN": "Italian",
   "INTELLECT": "Intellect",
   "DISCIPLINE": "Discipline",
   "STRENGTH": "Strength",
