--- a/app/shared/locales/es/translations.json
+++ b/app/shared/locales/es/translations.json
@@ -6,6 +6,7 @@
   "FRENCH": "Francés",
   "JAPANESE": "Japonés",
   "PORTUGUESE": "Portugués",
+  "ITALIAN": "Italiano",
   "INTELLECT": "Intelecto",
   "DISCIPLINE": "Disciplina",
   "STRENGTH": "Fuerza",
