--- a/app/shared/locales/fr/translations.json
+++ b/app/shared/locales/fr/translations.json
@@ -6,6 +6,7 @@
   "FRENCH": "Français",
   "JAPANESE": "Japonais",
   "PORTUGUESE": "Portugais",
+  "ITALIAN": "Italien",
   "INTELLECT": "Intelligence",
   "DISCIPLINE": "Discipline",
   "STRENGTH": "Force",
