--- a/app/shared/locales/pt-br/translations.json
+++ b/app/shared/locales/pt-br/translations.json
@@ -6,6 +6,7 @@
   "FRENCH": "Francês",
   "JAPANESE": "Japonês",
   "PORTUGUESE": "Português",
+  "ITALIAN": "Italiano",
   "INTELLECT": "Intelecto",
   "DISCIPLINE": "Disciplina",
   "STRENGTH": "Força",
