--- a/app/shared/locales/ja/translations.json
+++ b/app/shared/locales/ja/translations.json
@@ -6,6 +6,7 @@
   "FRENCH": "フランス語",
   "JAPANESE": "日本語",
   "PORTUGUESE": "ポルトガル語",
+  "ITALIAN": "イタリアの",
   "INTELLECT": "知性",
   "DISCIPLINE": "鍛錬",
   "STRENGTH": "敏捷性",
