--- a/app/shared/locales/ja/translations.json
+++ b/app/shared/locales/ja/translations.json
@@ -18,7 +18,9 @@
   "ACCOUNT": "Account",
   "CHARACTER": "Character",
   "RECENT": "Recent Matches",
+  "WON": "Won",
   "WINS": "Wins",
+  "LOST": "Lost",
   "LOSSES": "Losses",
   "KILLS": "Kills",
   "HEADSHOTS": "Headshots",
@@ -29,6 +31,7 @@
   "ELO": "Elo Rating",
   "FLAWLESS": "Flawless",
   "USAGE": "Weapon Usage",
+  "WEAPONTYPESUSED": "Weapon types used most",
   "MATCHES": "Matches",
   "THISWEEK": "This Week",
   "YEAR2": "Year 2",
