--- a/app/shared/locales/pt-br/translations.json
+++ b/app/shared/locales/pt-br/translations.json
@@ -39,7 +39,7 @@
   "RANK": "Rank",
   "WEAPONFOOTER": "Stats are for this character with this weapon",
   "WEAPONDESC": "No Trials experience for this character with this weapon yet",
-  "TRANSLATEEMAIL": "Please note that this setting only influences the names of Destiny-related weapons and gear for now. Want to help us translate the entire site to your language? <a href=\"mailto:translations@trials.report\" target=\"_blank\">Send us an email!</a>",
+  "TRANSLATEEMAIL": "Please note that this setting only influences the names of Destiny-related weapons and gear for now. Want to help us translate the entire site to your language? <a href=\"mailto:destinytrialsreport@gmail.com\" target=\"_blank\">Send us an email!</a>",
   "CUSTOMISE": "Customise player card content",
   "KDRATIO": "Kill/Death ratio",
   "INCLUDING": "Including the chart from latest matches",
