keep english translations in en only and prevent autocomplete if no names were returned

--- a/app/shared/locales/ja/translations.json
+++ b/app/shared/locales/ja/translations.json
@@ -12,49 +12,5 @@
   "STRENGTH": "敏捷性",
   "ARMOR": "生命力",
   "RECOVERY": "回復",
-  "AGILITY": "敏捷性",
-  "SETTINGS": "Settings",
-  "LEVEL": "Level",
-  "ACCOUNT": "Account",
-  "CHARACTER": "Character",
-  "RECENT": "Recent Matches",
-  "WON": "Won",
-  "WINS": "Wins",
-  "LOST": "Lost",
-  "LOSSES": "Losses",
-  "KILLS": "Kills",
-  "HEADSHOTS": "Headshots",
-  "PRECISION": "Precision",
-  "STREAK": "Streak",
-  "WINSTREAK": "Longest Win Streak",
-  "PERCENT": "Percent",
-  "ELO": "Elo Rating",
-  "FLAWLESS": "Flawless",
-  "USAGE": "Weapon Usage",
-  "WEAPONTYPESUSED": "Weapon types used most",
-  "MATCHES": "Matches",
-  "THISWEEK": "This Week",
-  "YEAR2": "Year 2",
-  "TIER": "Tier",
-  "RANK": "Rank",
-  "WEAPONFOOTER": "Stats are for this character with this weapon",
-  "WEAPONDESC": "No Trials experience for this character with this weapon yet",
-  "TRANSLATEEMAIL": "Please note that this setting only influences the names of Destiny-related weapons and gear for now. Want to help us translate the entire site to your language? <a href=\"mailto:destinytrialsreport@gmail.com\" target=\"_blank\">Send us an email!</a>",
-  "CUSTOMISE": "Customise player card content",
-  "KDRATIO": "Kill/Death ratio",
-  "INCLUDING": "Including the chart from latest matches",
-  "MAINSTATS": "Main stats",
-  "MAINSTATSDESC": "Win percentage, win streak, ELO-rating and lighthouse visits",
-  "WEEKSTATS": "Weekly stats",
-  "WEEKSTATSDESC": "Stats and weapon usage for this week only",
-  "EQTAB": "Equipped tab",
-  "EQTABDESC": "Current character loadout",
-  "MATCHTAB": "Last Matches tab",
-  "MATCHTABDESC": "An overview of the character's last three Trials matches",
-  "STATSTAB": "Stats tab",
-  "STATSTABDESC": "Character data from the beginning of time",
-  "EQWEAPONS": "Equipped weapons",
-  "EQARMOR": "Equipped armor",
-  "ARMORSTATS": "Armor stats",
-  "CHARPERKS": "Character perks"
+  "AGILITY": "敏捷性"
 }
