lots of translations, some are missing or need adjusting

--- a/app/shared/locales/de/translations.json
+++ b/app/shared/locales/de/translations.json
@@ -12,5 +12,32 @@
   "STRENGTH": "Stärke",
   "ARMOR": "Rüstung",
   "RECOVERY": "Erholung",
-  "AGILITY": "Agilität"
+  "AGILITY": "Agilität",
+
+  "wins": "Gewinne",
+  "losses": "Verlust",
+  "kills": "Kills",
+  "deaths": "Tode",
+  "assists": "Assists",
+  "killsDeathsRatio": "K/T-Ratio",
+  "killsDeathsRatioShort": "K/T",
+  "killsDeathsAssists": "KA/T-Ratio",
+  "killsDeathsAssistsShort": "KA/T",
+  "longestKillSpree": "Längste Kill-Serie",
+  "longestSingleLife": "Längstes Einzelleben",
+  "weaponBestType": "Beste Waffe",
+  "weaponKillsAutoRifle": "Automatikgewehr",
+  "weaponKillsFusionRifle": "Fusionsgewehr",
+  "weaponKillsGrenade": "Granate",
+  "weaponKillsHandCannon": "Handfeuerwaffe",
+  "weaponKillsMachinegun": "Maschinengewehr",
+  "weaponKillsMelee": "Nahkampf",
+  "weaponKillsPulseRifle": "Impulsgewehr",
+  "weaponKillsRocketLauncher": "Raketenwerfer",
+  "weaponKillsScoutRifle": "Scout-Gewehr",
+  "weaponKillsShotgun": "Schrotflinte",
+  "weaponKillsSideArm": "Pistole",
+  "weaponKillsSniper": "Scharfschützengewehr",
+  "weaponKillsSuper": "Super",
+  "weaponKillsSword": "Schwert"
 }
