--- a/app/shared/locales/en/translations.json
+++ b/app/shared/locales/en/translations.json
@@ -19,10 +19,7 @@
   "CHARACTER": "Character",
   "RECENT": "Recent Matches",
   "WON": "Won",
-  "WINS": "Wins",
   "LOST": "Lost",
-  "LOSSES": "Losses",
-  "KILLS": "Kills",
   "HEADSHOTS": "Headshots",
   "PRECISION": "Precision",
   "STREAK": "Streak",
@@ -56,5 +53,32 @@
   "EQWEAPONS": "Equipped weapons",
   "EQARMOR": "Equipped armor",
   "ARMORSTATS": "Armor stats",
-  "CHARPERKS": "Character perks"
+  "CHARPERKS": "Character perks",
+
+  "wins": "Wins",
+  "losses": "Losses",
+  "kills": "Kills",
+  "deaths": "Deaths",
+  "assists": "Assists",
+  "killsDeathsRatio": "K/D Ratio",
+  "killsDeathsRatioShort": "K/D",
+  "killsDeathsAssists": "KA/D Ratio",
+  "killsDeathsAssistsShort": "KA/D",
+  "longestKillSpree": "Longest Kill Spree",
+  "longestSingleLife": "Longest Single Life",
+  "weaponBestType": "Best Weapon",
+  "weaponKillsAutoRifle": "Auto Rifle",
+  "weaponKillsFusionRifle": "Fusion Rifle",
+  "weaponKillsGrenade": "Grenade",
+  "weaponKillsHandCannon": "Hand Cannon",
+  "weaponKillsMachinegun": "Machine Gun",
+  "weaponKillsMelee": "Melee",
+  "weaponKillsPulseRifle": "Pulse Rifle",
+  "weaponKillsRocketLauncher": "Rocket Launcher",
+  "weaponKillsScoutRifle": "Scout Rifle",
+  "weaponKillsShotgun": "Shotgun",
+  "weaponKillsSideArm": "Sidearm",
+  "weaponKillsSniper": "Sniper Rifle",
+  "weaponKillsSuper": "Super",
+  "weaponKillsSword": "Sword"
 }
