--- a/app/shared/locales/es/translations.json
+++ b/app/shared/locales/es/translations.json
@@ -12,5 +12,32 @@
   "STRENGTH": "Fuerza",
   "ARMOR": "Armadura",
   "RECOVERY": "Recuperación",
-  "AGILITY": "Agilidad"
+  "AGILITY": "Agilidad",
+
+  "wins": "Victorias",
+  "losses": "Derrotas",
+  "kills": "Bajas",
+  "deaths": "Muertes",
+  "assists": "Asistencias",
+  "killsDeathsRatio": "Bajas/Muertes",
+  "killsDeathsRatioShort": "B/M",
+  "killsDeathsAssists": "BA/M",
+  "killsDeathsAssistsShort": "BA/M",
+  "longestKillSpree": "Racha de bajas más larga",
+  "longestSingleLife": "Vida más larga",
+  "weaponBestType": "Mejor arma",
+  "weaponKillsAutoRifle": "Fusil automático",
+  "weaponKillsFusionRifle": "Fusil de fusión",
+  "weaponKillsGrenade": "Granada",
+  "weaponKillsHandCannon": "Cañón de mano",
+  "weaponKillsMachinegun": "Ametralladora",
+  "weaponKillsMelee": "Cuerpo a cuerpo",
+  "weaponKillsPulseRifle": "Fusil de pulsos",
+  "weaponKillsRocketLauncher": "Lanzacohetes",
+  "weaponKillsScoutRifle": "Fusil de explorador",
+  "weaponKillsShotgun": "Escopeta",
+  "weaponKillsSideArm": "Pistola",
+  "weaponKillsSniper": "Fusil de francotirador",
+  "weaponKillsSuper": "Súper",
+  "weaponKillsSword": "Espada"
 }
