--- a/app/shared/locales/fr/translations.json
+++ b/app/shared/locales/fr/translations.json
@@ -12,5 +12,32 @@
   "STRENGTH": "Force",
   "ARMOR": "Armure",
   "RECOVERY": "Régénération",
-  "AGILITY": "Agilité"
+  "AGILITY": "Agilité",
+
+  "wins": "Victoires",
+  "losses": "Défaites",
+  "kills": "Frags",
+  "deaths": "Morts",
+  "assists": "Asistencias",
+  "killsDeathsRatio": "Taux F/M",
+  "killsDeathsRatioShort": "F/M",
+  "killsDeathsAssists": "Taux FA/M",
+  "killsDeathsAssistsShort": "FA/M",
+  "longestKillSpree": "Série la plus longue",
+  "longestSingleLife": "Meilleure survie",
+  "weaponBestType": "Meilleure arme",
+  "weaponKillsAutoRifle": "Fusil automatique",
+  "weaponKillsFusionRifle": "Fusil à fusion",
+  "weaponKillsGrenade": "Grenade",
+  "weaponKillsHandCannon": "Revolver",
+  "weaponKillsMachinegun": "Mitrailleuse",
+  "weaponKillsMelee": "Mêlée",
+  "weaponKillsPulseRifle": "Fusil à impulsion",
+  "weaponKillsRocketLauncher": "Lance-roquettes",
+  "weaponKillsScoutRifle": "Fusil d'éclaireur",
+  "weaponKillsShotgun": "Fusil à pompe",
+  "weaponKillsSideArm": "Pistolet",
+  "weaponKillsSniper": "Fusil de précision",
+  "weaponKillsSuper": "Super",
+  "weaponKillsSword": "Épée"
 }
