--- a/app/shared/locales/it/translations.json
+++ b/app/shared/locales/it/translations.json
@@ -12,5 +12,32 @@
   "STRENGTH": "Forza",
   "ARMOR": "Armatura",
   "RECOVERY": "Recupero",
-  "AGILITY": "Agilità"
+  "AGILITY": "Agilità",
+
+  "wins": "Vittorie",
+  "losses": "Perse",
+  "kills": "Uccisioni",
+  "deaths": "Morti",
+  "assists": "Assist",
+  "killsDeathsRatio": "Uccisioni/Morti",
+  "killsDeathsRatioShort": "U/M",
+  "killsDeathsAssists": "UA/M",
+  "killsDeathsAssistsShort": "UA/M",
+  "longestKillSpree": "Serie uccisioni più lunga",
+  "longestSingleLife": "Durata vita maggiore",
+  "weaponBestType": "Arma migliore",
+  "weaponKillsAutoRifle": "Fucile automatico",
+  "weaponKillsFusionRifle": "Fucile a fusione",
+  "weaponKillsGrenade": "Granata",
+  "weaponKillsHandCannon": "Cannone portatile",
+  "weaponKillsMachinegun": "Mitragliatrice",
+  "weaponKillsMelee": "Corpo a corpo",
+  "weaponKillsPulseRifle": "Fucile a impulsi",
+  "weaponKillsRocketLauncher": "Lanciarazzi",
+  "weaponKillsScoutRifle": "Fucile da ricognizione",
+  "weaponKillsShotgun": "Fucile a pompa",
+  "weaponKillsSideArm": "Arma da supporto",
+  "weaponKillsSniper": "Fucile di precisione",
+  "weaponKillsSuper": "Super",
+  "weaponKillsSword": "Spada"
 }
