--- a/app/shared/locales/ja/translations.json
+++ b/app/shared/locales/ja/translations.json
@@ -12,5 +12,32 @@
   "STRENGTH": "敏捷性",
   "ARMOR": "生命力",
   "RECOVERY": "回復",
-  "AGILITY": "敏捷性"
+  "AGILITY": "敏捷性",
+
+  "wins": "勝利数",
+  "losses": "",
+  "kills": "キル数",
+  "deaths": "死亡回数",
+  "assists": "アシスト数",
+  "killsDeathsRatio": "キル・デス比",
+  "killsDeathsRatioShort": "キル・デス比",
+  "killsDeathsAssists": "キル・デス比",
+  "killsDeathsAssistsShort": "キル・デス比",
+  "longestKillSpree": "最長連続キル",
+  "longestSingleLife": "最長ライフ",
+  "weaponBestType": "ベスト武器",
+  "weaponKillsAutoRifle": "オートライフル",
+  "weaponKillsFusionRifle": "フュージョンライフル",
+  "weaponKillsGrenade": "グレネード",
+  "weaponKillsHandCannon": "ハンドキャノン",
+  "weaponKillsMachinegun": "マシンガン",
+  "weaponKillsMelee": "近接",
+  "weaponKillsPulseRifle": "パルスライフル",
+  "weaponKillsRocketLauncher": "ロケットランチャー",
+  "weaponKillsScoutRifle": "スカウトライフル",
+  "weaponKillsShotgun": "ショットガン",
+  "weaponKillsSideArm": "ピストル",
+  "weaponKillsSniper": "スナイパーライフル",
+  "weaponKillsSuper": "スーパースキル",
+  "weaponKillsSword": "剣"
 }
