--- a/app/shared/locales/pt-br/translations.json
+++ b/app/shared/locales/pt-br/translations.json
@@ -12,5 +12,31 @@
   "STRENGTH": "Força",
   "ARMOR": "Armadura",
   "RECOVERY": "Recuperação",
-  "AGILITY": "Agilidade"
+  "AGILITY": "Agilidade",
+
+  "wins": "Vitórias",
+  "losses": "Derrotas",
+  "kills": "Baixas",
+  "deaths": "Mortes",
+  "assists": "Assistências",
+  "killsDeathsRatio": "Relação de B/M",
+  "killsDeathsRatioShort": "B/M",
+  "killsDeathsAssists": "",
+  "longestKillSpree": "Surto homicida mais longo",
+  "longestSingleLife": "Vida única mais longa",
+  "weaponBestType": "Melhor arma",
+  "weaponKillsAutoRifle": "Fuzil automático",
+  "weaponKillsFusionRifle": "Fuzil de fusão",
+  "weaponKillsGrenade": "Granada",
+  "weaponKillsHandCannon": "Canhão de mão",
+  "weaponKillsMachinegun": "Metralhadora",
+  "weaponKillsMelee": "Corpo a corpo",
+  "weaponKillsPulseRifle": "Fuzil de pulso",
+  "weaponKillsRocketLauncher": "Lança-foguetes",
+  "weaponKillsScoutRifle": "Fuzil de Batedor",
+  "weaponKillsShotgun": "Escopeta",
+  "weaponKillsSideArm": "Pistola",
+  "weaponKillsSniper": "Rifle de Precisão",
+  "weaponKillsSuper": "Super Habilidade",
+  "weaponKillsSword": "Espada"
 }
