--- a/app/shared/locales/es/translations.json
+++ b/app/shared/locales/es/translations.json
@@ -1,11 +1,5 @@
 {
   "LANGUAGE": "Idioma",
-  "INTELLECT": "Intelecto",
-  "DISCIPLINE": "Disciplina",
-  "STRENGTH": "Fuerza",
-  "ARMOR": "Armadura",
-  "RECOVERY": "Recuperación",
-  "AGILITY": "Agilidad",
 
   "wins": "Victorias",
   "losses": "Derrotas",
@@ -32,5 +26,11 @@
   "weaponKillsSideArm": "Pistola",
   "weaponKillsSniper": "Fusil de francotirador",
   "weaponKillsSuper": "Súper",
-  "weaponKillsSword": "Espada"
+  "weaponKillsSword": "Espada",
+  "STAT_INTELLECT": "Intelecto",
+  "STAT_DISCIPLINE": "Disciplina",
+  "STAT_STRENGTH": "Fuerza",
+  "STAT_ARMOR": "Armadura",
+  "STAT_RECOVERY": "Recuperación",
+  "STAT_AGILITY": "Agilidad"
 }
