Settings for this week / map based tabs

--- a/app/shared/locales/en/translations.json
+++ b/app/shared/locales/en/translations.json
@@ -30,7 +30,13 @@
   "MAINSTATS": "Main stats",
   "MAINSTATSDESC": "Win percentage, win streak, ELO-rating and lighthouse visits",
   "WEEKSTATS": "Weekly stats",
-  "WEEKSTATSDESC": "Stats and weapon usage for this week only",
+  "WEEKSTATSDESC": "Stats for this week only",
+  "WEEKWEAPONS": "Weekly weapons",
+  "WEEKWEAPONSDESC": "Weapon usage for this week only",
+  "MAPBASEDSTATS": "Map based stats",
+  "MAPBASEDSTATSDESC": "Stats for the current map only",
+  "MAPBASEDWEAPONS": "Map based weapons",
+  "MAPBASEDWEAPONSDESC": "Weapon usage for the current map only",
   "EQTAB": "Equipped tab",
   "EQTABDESC": "Current character loadout",
   "MATCHTAB": "Last Matches tab",
