change weapon popover notice

--- a/app/shared/locales/en/translations.json
+++ b/app/shared/locales/en/translations.json
@@ -21,7 +21,7 @@
   "YEAR2": "Year 2",
   "TIER": "Tier",
   "RANK": "Rank",
-  "WEAPONFOOTER": "Stats are for this character with this weapon",
+  "WEAPONFOOTER": "Stats for this weapon are account-wide",
   "WEAPONDESC": "No Trials experience for this character with this weapon yet",
   "TRANSLATEEMAIL": "Please note that this setting only influences the names of Destiny-related weapons and gear for now. Want to help us translate the entire site to your language? <a href=\"mailto:destinytrialsreport@gmail.com\" target=\"_blank\">Send us an email!</a>",
   "CUSTOMISE": "Customise player card content",
