add translation key for playlist name

--- a/app/shared/locales/en/translations.json
+++ b/app/shared/locales/en/translations.json
@@ -89,5 +89,6 @@
       "diamond": "Diamond"
     }
   },
-  "SEASON1": "Season 1"
+  "SEASON1": "Season 1",
+  "playlist_name": "Assorted Playlist"
 }
