fix badge popovers

--- a/app/shared/locales/en/translations.json
+++ b/app/shared/locales/en/translations.json
@@ -90,5 +90,10 @@
     }
   },
   "SEASON1": "Season 1",
-  "playlist_name": "Assorted Playlist"
+  "playlist_name": "Assorted Playlist",
+  "badges": {
+    "Developer": "Hey! We made this site, so more than likely we are looking you up too...",
+    "Donator": "Part of an amazing few who have helped keep this site running",
+    "Guardian.gg": "One of the creators of Guardian.gg, a fantastic resource for all things Destiny"
+  }
 }
