translation for flawless popover, auto width, return to top-right placement

--- a/app/shared/locales/en/translations.json
+++ b/app/shared/locales/en/translations.json
@@ -96,5 +96,6 @@
     "Developer": "Hey! We made this site, so more than likely we are looking you up too...",
     "Donator": "Part of an amazing few who have helped keep this site running",
     "Guardian.gg": "One of the creators of Guardian.gg, a fantastic resource for all things Destiny"
-  }
+  },
+  "flawlessPopoverHeader": "FLAWLESS WITH ACCOUNT / CHARACTER"
 }
