add year 1 kd and week/map flawless

--- a/app/shared/locales/en/translations.json
+++ b/app/shared/locales/en/translations.json
@@ -18,6 +18,7 @@
   "WEAPONTYPESUSED": "Weapon types used most",
   "MATCHES": "Matches",
   "THISWEEK": "This Week",
+  "YEAR1": "Year 1",
   "YEAR2": "Year 2",
   "YEAR3": "Year 3",
   "TIER": "Tier",
