--- a/app/shared/locales/tr/translations.json
+++ b/app/shared/locales/tr/translations.json
@@ -18,7 +18,9 @@
   "WEAPONTYPESUSED": "En çok kullanılan silah türleri",
   "MATCHES": "Maçlar",
   "THISWEEK": "Bu hafta",
+  "YEAR1": "Yıl 1",
   "YEAR2": "Yıl 2",
+  "YEAR3": "Yıl 3",
   "TIER": "Tier",
   "RANK": "Rank",
   "WEAPONFOOTER": "Karakterin bu silahla olan istatistikleri",
