--- a/app/shared/locales/en/translations.json
+++ b/app/shared/locales/en/translations.json
@@ -102,6 +102,7 @@
   },
   "flawlessPopoverHeader": "FLAWLESS WITH ACCOUNT / CHARACTER",
   "artifactHazards": {
+    "Radeghast": "Sword deflects rockets",
     "Radegast": "Sword deflects rockets",
     "Perun": "Highlights low health/full super",
     "Skorri": "Faster super recharge",
